test/spec_vectors/if/fail/module_23.wat
(module (func $type-else-value-num-vs-void (if (i32.const 1) (then) (else (i32.const 1)))))